[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractgraph-ml"
version = "0.1.0"
description = "ML-oriented AbstractGraph estimators, neural models, importance, feasibility, and top-k tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "abstractgraph>=0.1.0",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.2",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel>=6.29",
  "nbclient>=0.10",
  "nbformat>=5.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
